mdapi/Custom/objects/Work_Order__c.object
<CustomObject>
    <description>Resident Services Project:  This object is used for the grouping of Service Items.  It has a few triggers and many rollup summary fields and formula fields tied to it.  It is used to document the property and Resident.  It also has a related Service Request Wizard Visualforce page.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Resolution__c</fullName>
        <label>Actual Resolution</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Budget Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appointment_Completion__c</fullName>
        <formula>If ( And ( Closed_Appointments__c &gt; 0, Total_Appointments__c &gt; 0 ), Closed_Appointments__c / Total_Appointments__c , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appointment % Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Best_PA_Survey__c</fullName>
        <label>Best PA Survey</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Date_Time__c</fullName>
        <inlineHelpText>This is the Date &amp; Time the caller called in on this request</inlineHelpText>
        <label>Call Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Created__c</fullName>
        <label>Case Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appliance</fullName>
                </value>
                <value>
                    <fullName>Cabinets</fullName>
                </value>
                <value>
                    <fullName>Call Back</fullName>
                </value>
                <value>
                    <fullName>Clog</fullName>
                </value>
                <value>
                    <fullName>Drywall</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Fence</fullName>
                </value>
                <value>
                    <fullName>Flooring</fullName>
                </value>
                <value>
                    <fullName>Garage</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>HVAC</fullName>
                </value>
                <value>
                    <fullName>Landscaping</fullName>
                </value>
                <value>
                    <fullName>Paint</fullName>
                </value>
                <value>
                    <fullName>Pest</fullName>
                </value>
                <value>
                    <fullName>Plumbing</fullName>
                </value>
                <value>
                    <fullName>Pool</fullName>
                </value>
                <value>
                    <fullName>Roof</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Turnover</fullName>
                </value>
                <value>
                    <fullName>Water Heater</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>“City” part of the work order location.</description>
        <inlineHelpText>“City” part of the work order location.</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Remarks__c</fullName>
        <label>Client Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <inlineHelpText>Select date at which this Work Order has been closed / Turnover periode date</inlineHelpText>
        <label>Turnover period date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Appointments__c</fullName>
        <label>Closed Appointments</label>
        <summaryFilterItems>
            <field>Appointment__c.Field_Status__c</field>
            <operation>equals</operation>
            <value>completed, not-done, extended</value>
        </summaryFilterItems>
        <summaryForeignKey>Appointment__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Completed_Date_Time__c</fullName>
        <label>Completed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Describe the Work Order</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>When does this workorder has to be finished by ?</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ETA__c</fullName>
        <label>ETA</label>
        <summarizedField>Appointment__c.ETA__c</summarizedField>
        <summaryForeignKey>Appointment__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Entitlement__c</fullName>
        <formula>IF ( Escalated_Appointment__c , IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Escalated&quot;, 16, 16), 
&quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entitlement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalated_Appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalated Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <formula>IF ( Escalated_Appointment__c , IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Escalated&quot;, 16, 16), 
&quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Escalated?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Status__c</fullName>
        <label>Field Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>scheduled</fullName>
                    <default>true</default>
                    <label>scheduled</label>
                </value>
                <value>
                    <fullName>assigned</fullName>
                </value>
                <value>
                    <fullName>pending</fullName>
                </value>
                <value>
                    <fullName>started</fullName>
                </value>
                <value>
                    <fullName>completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Call_Length_Hours__c</fullName>
        <formula>IF( 
	ISPICKVAL (Service_Request_Status__c, &quot;Closed&quot;), 0,
 	IF(OR(
		NOT(ISNULL( SReq_First_Call_Date_Time__c )),
		NOT(ISBLANK( SReq_First_Call_Date_Time__c ))
	)
	,
	(SReq_First_Call_Date_Time__c - CreatedDate)*24,
	(Now() - CreatedDate)*24
	)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Call Length (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Resolution_By__c</fullName>
        <formula>Case_Created__c + ( 24.0 / Account__r.Contract_Hours__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Guaranteed Resolution By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hour_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Rate / hour of work</inlineHelpText>
        <label>Hour Rate</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internal_Remarks_WO__c</fullName>
        <inlineHelpText>Use this field to post your feedback with the owner</inlineHelpText>
        <label>Internal Remarks (WO)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Work_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Work Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When locked, no more editing possible. Enabled by TB workflow</description>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>TEXT (PortfolioProperty__r.Market__c)</formula>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Closed_Items__c</fullName>
        <label>Number of Closed Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_High_items__c</fullName>
        <label>Number of High items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Low_items__c</fullName>
        <label>Number of Low items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Medium_items__c</fullName>
        <label>Number of Medium items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Items__c</fullName>
        <label>Number of Open Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Urgent_items__c</fullName>
        <label>Number of Urgent items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupied_Status_SReq__c</fullName>
        <label>Occupied Status @ SReq</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vacant</fullName>
                </value>
                <value>
                    <fullName>Occupied</fullName>
                    <default>true</default>
                    <label>Occupied</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Time_Status__c</fullName>
        <label>On Time Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Jeopardy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Time__c</fullName>
        <formula>IF ( TEXT ( On_Time_Status__c ) = &quot;Good&quot;, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Yes&quot;, 16, 16), 
IF ( TEXT ( On_Time_Status__c ) = &quot;Jeopardy&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Yes&quot;, 16, 16), 
&quot;&quot; ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On Time?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Call_Date__c</fullName>
        <formula>DATEVALUE(Call_Date_Time__c)</formula>
        <label>Order Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <description>Current status of the service order</description>
        <inlineHelpText>Current status of the service order</inlineHelpText>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Planner Accepted</fullName>
                </value>
                <value>
                    <fullName>Technician Onsite</fullName>
                </value>
                <value>
                    <fullName>Restored</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <description>Type of service order: Field Service, Depot repair etc.</description>
        <inlineHelpText>Type of service order: Field Service, Depot repair etc.</inlineHelpText>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Corrective</fullName>
                </value>
                <value>
                    <fullName>Pickup</fullName>
                </value>
                <value>
                    <fullName>Preventive</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Revisit</fullName>
                </value>
                <value>
                    <fullName>Combination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Priority__c</fullName>
        <label>Overall Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Urgent</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Vendor</fullName>
                    <default>true</default>
                    <label>Vendor</label>
                </value>
                <value>
                    <fullName>Technician</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planned_Date__c</fullName>
        <label>Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PortfolioProperty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio/Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same Day</fullName>
                </value>
                <value>
                    <fullName>Next Day</fullName>
                </value>
                <value>
                    <fullName>48 hours</fullName>
                </value>
                <value>
                    <fullName>Specific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Problem_Description__c</fullName>
        <label>Problem Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <formula>PortfolioProperty__r.Property_City__c</formula>
        <label>Property City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <formula>PortfolioProperty__r.Property_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Street__c</fullName>
        <formula>PortfolioProperty__r.Property_Street__c</formula>
        <label>Property Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Zip_Code__c</fullName>
        <formula>PortfolioProperty__r.Property_Zip_Code__c</formula>
        <label>Property Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT (PortfolioProperty__r.Region__c)</formula>
        <label>Market2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Residence</label>
        <referenceTo>Residence__c</referenceTo>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resident_Email__c</fullName>
        <label>Resident Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Resident_First_Name__c</fullName>
        <label>Resident First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resident_Full_Name__c</fullName>
        <formula>Resident_First_Name__c + &apos; &apos; +  Resident_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resident Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resident_Home_Phone__c</fullName>
        <label>Resident Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Resident_Last_Name__c</fullName>
        <label>Resident Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resident_Mobile_Phone__c</fullName>
        <label>Resident Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Resident_Preferred_Communication__c</fullName>
        <label>Resident Preferred Communication</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Escalate - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Reschedule</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA_Expiration__c</fullName>
        <label>SLA Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SR_key__c</fullName>
        <label>SR_key</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SReq_Completed_Date_Time__c</fullName>
        <label>SReq Completed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SReq_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SReq Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SReq_Created_On__c</fullName>
        <formula>IF( SReq_Yardi_Created_On__c  == null || ISBLANK(SReq_Yardi_Created_On__c), DATEVALUE(CreatedDate), SReq_Yardi_Created_On__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SReq Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SReq_First_Call_Date_Time__c</fullName>
        <label>SReq First Call Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SReq_Open_Duration__c</fullName>
        <formula>IF(
	OR(
		NOT(ISNULL( SReq_Completed_Date_Time__c )),
		NOT(ISBLANK( SReq_Completed_Date_Time__c ))
	)
	,
	(SReq_Completed_Date_Time__c - CreatedDate)*24,
	(Now() - CreatedDate)*24
)</formula>
        <label>SReq Open Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SReq_Yardi_Created_On__c</fullName>
        <label>SReq Yardi Created On:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Channel__c</fullName>
        <label>Service Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Portfolio Manager</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Rehab</fullName>
                </value>
                <value>
                    <fullName>TIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Req_Tech_Avg_Hourly_Rate_formula__c</fullName>
        <formula>Service_Request_Tech_Avg_Hourly_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Request Tech Avg Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Request_Labor_Cost__c</fullName>
        <formula>Service_Request_Total_Hours_Logged__c  *  Service_Request_Tech_Avg_Hourly_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Request Labor Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Request_Notes__c</fullName>
        <inlineHelpText>Service Request Notes include Access / Entry notes and any other relevant details associated with connecting with or accessing the residence.</inlineHelpText>
        <label>Service Request Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Request_Status__c</fullName>
        <inlineHelpText>Rollup from Service Item Status&apos;s</inlineHelpText>
        <label>Service Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Request_Tech_Avg_Hourly_Rate__c</fullName>
        <defaultValue>25</defaultValue>
        <label>Service Request Tech Avg Hourly Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Request_Total_Cost__c</fullName>
        <formula>Service_Request_Labor_Cost__c  +  Service_Request_Total_Material_Cost__c + Service_Request_Total_Vendor_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Request Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Request_Total_Hours_Logged__c</fullName>
        <label>Service Request Total Tech. Labor</label>
        <summarizedField>Service_Item__c.Time_Spent_on_Service_Item__c</summarizedField>
        <summaryForeignKey>Service_Item__c.Service_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Service_Request_Total_Material_Cost__c</fullName>
        <inlineHelpText>Includes all related Service Items</inlineHelpText>
        <label>Service Request Total Material Cost</label>
        <summarizedField>Service_Item__c.Material_Cost__c</summarizedField>
        <summaryForeignKey>Service_Item__c.Service_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Service_Request_Total_Vendor_Cost__c</fullName>
        <label>Service Request Total Vendor Cost</label>
        <summarizedField>Service_Item__c.Vendor_Invoice_Amount__c</summarizedField>
        <summaryForeignKey>Service_Item__c.Service_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Service_Request_Type__c</fullName>
        <inlineHelpText>Proactive = called in by Resident, neighbor, etc.
Reactive = Assigned by IH (ie. Preventative, etc.)</inlineHelpText>
        <label>Service Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proactive</fullName>
                </value>
                <value>
                    <fullName>Reactive</fullName>
                    <default>true</default>
                    <label>Reactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request</label>
        <referenceTo>Service_Request__c</referenceTo>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Source__c</fullName>
        <label>Service Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resident Call In</fullName>
                    <default>true</default>
                    <label>Resident Call In</label>
                </value>
                <value>
                    <fullName>Yardi Email Services</fullName>
                </value>
                <value>
                    <fullName>Dispatcher</fullName>
                </value>
                <value>
                    <fullName>Vendor Supervisor</fullName>
                </value>
                <value>
                    <fullName>Technician</fullName>
                </value>
                <value>
                    <fullName>Technician Supervisor</fullName>
                </value>
                <value>
                    <fullName>Portfolio Manager</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Rehab</fullName>
                </value>
                <value>
                    <fullName>TIP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Ready awaiting PO</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed for invoicing</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>“Street” part of the work order location</description>
        <inlineHelpText>“Street” part of the work order location</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
</CustomObject>